qttools: fix build of test

--- a/src/qttools-test/CMakeLists.txt
+++ b/src/qttools-test/CMakeLists.txt
@@ -18,7 +18,8 @@ target_link_libraries(
     ${Qt5Gui_LIBRARIES}
     ${Qt5Core_LIBRARIES}
     opengl32
-    qtpcre
+    qtpcre2
+    version
     jpeg
     png
     winmm
