decrease Qt version from 5.7.1 to 5.6.0

--- a/src/qttools-test/CMakeLists.txt
+++ b/src/qttools-test/CMakeLists.txt
@@ -17,17 +17,13 @@ target_link_libraries(
     ${Qt5Widgets_LIBRARIES}
     ${Qt5Gui_LIBRARIES}
     ${Qt5Core_LIBRARIES}
-    netapi32
-    userenv
     opengl32
-    harfbuzz
+    qtpcre
     jpeg
     png
     winmm
     dwmapi
     uxtheme
     ws2_32
-    qtpcre2
-    version
     z
 )
